--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -114,13 +114,13 @@
               <h6 class="fw-bold">شفت<span> {{ shiftData?.shift_type || 'Shift Type' }}</span></h6>
               <h6 class="text-muted">
                 <small>
-                  من الساعة 
-                  <span>{{ formatTime(shiftData?.shift_start) }}</span> 
-                  إلى 
+                  من الساعة
+                  <span>{{ formatTime(shiftData?.shift_start) }}</span>
+                  إلى
                   <span>{{ formatTime(shiftData?.shift_end) }}</span>
                 </small>
               </h6>
-              
+
             </div>
           </div>
         </div>
@@ -140,12 +140,12 @@
             min="0"
           >
           </div>
-       
-          
+
+
           <h6 class="error-msg main-color" *ngIf="errorMessage">
             <small>{{ errorMessage }}</small>
           </h6>
-          
+
           <h6><small><i class="fa-solid fa-money-bills main-color ms-1"></i>إجمالي مدفوعات البطاقة</small></h6>
           <h5 class="fw-bold">{{ closeVisa }} {{ currency_Symbol }}</h5>
         </div>
@@ -298,7 +298,7 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-     
+
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="sidebar-menu list-unstyled px-0 py-3">
@@ -465,7 +465,7 @@
       <span> عدد الاوردرات </span>
       <span>{{printingData?.orders_number}}</span>
     </div>
- <div class=" table-content">
+    <div class=" table-content">
       <span> صافي مبلغ نقدية </span>
       <span>{{printingData?.cashTotal}}</span>
     </div>
@@ -478,7 +478,7 @@
 
     <div class="table-content">
       <span> إجمالي الصافي </span>
-    <span>{{ (printingData?.visaTotal + printingData?.cashTotal) | number }}</span> 
+      <span>{{ (printingData?.visaTotal + printingData?.cashTotal) | number }}</span>
     </div>
     <!-- <div class="table-content">
       <span> مبيعات </span>
@@ -488,12 +488,12 @@
       <span> مبيعات نقدية </span>
 
       <span>{{printingData?.cashTotalwithoutRefund}}</span>
-    </div> 
+    </div>
   <div class="table-content">
       <span> مبيعات بطاقة </span>
       <span>{{printingData?.visaTotalwithoutRefund}} </span>
     </div>  -->
- <!--    <div class="table-content">
+    <!--    <div class="table-content">
       <span> خدمة </span>
       <span>{{printingData?.service.toFixed(2)}} </span>
     </div>
@@ -559,24 +559,24 @@
 
 
   </div>
-<p class="text-center fw-bold my-2 total">  المبيعات</p>
+  <p class="text-center fw-bold my-2 total"> المبيعات</p>
   <div class="border border-1 border-black">
-        <div class="table-content">
+    <div class="table-content">
       <span> مبيعات </span>
       <span>{{printingData?.totalSales}} </span>
     </div>
- <div class="table-content">
+    <div class="table-content">
       <span> مبيعات نقدية </span>
 
       <span>{{printingData?.cashTotalwithoutRefund}}</span>
-    </div> 
-  <div class="table-content">
+    </div>
+    <div class="table-content">
       <span> مبيعات بطاقة </span>
       <span>{{printingData?.visaTotalwithoutRefund}} </span>
-    </div> 
-   
+    </div>
 
-  </div>  
+
+  </div>
   <div *ngIf="printingData?.categories.length>0">
 
     <p class="text-center fw-bold my-2 total"> الفئات</p>
@@ -593,6 +593,32 @@
     </div>
 
   </div>
+  <p class="text-center fw-bold my-2 total"> طلبات التابع لطلبات</p>
+  <div class="border border-1 border-black">
+    <div class="table-content">
+      <span> العدد الاجمالى </span>
+      <span>{{printingData?.talabatcount}} </span>
+    </div>
+    <div class="table-content">
+      <span> عدد الكاش للطلبات</span>
+      <span>{{printingData?.talabat_cash_count}}</span>
+    </div>
+    <div class="table-content">
+      <span> مبيعات كاش للطلبات</span>
+      <span>{{printingData?.talabatcash}} </span>
+    </div>
+    <div class="table-content">
+      <span> عدد الفيزا للطلبات</span>
+      <span>{{printingData?.talabat_visa_count}}</span>
+    </div>
+    <div class="table-content">
+      <span> مبيعات أجل للطلبات</span>
+      <span>{{printingData?.talabatvisa}} </span>
+    </div>
+
+
+  </div>
+
   <footer class="mt-3">
     <div class="d-flex justify-content-between align-items-center fw-bold">
       <p>شكرا لثقتكم بخدمتنا</p>
