--- a/src/app/side-details/side-details.component.html
+++ b/src/app/side-details/side-details.component.html
@@ -434,7 +434,7 @@ selectedOrderType === 'talabat') {
         <p>المجموع</p>
         <p class="fw-bold">{{ getTotal().toFixed(2) }} {{ currencySymbol }}</p>
       </li>
-      @if (discountAmount && validCoupon) {
+      @if (discountAmount && validCoupon && selectedOrderType !== 'talabat') {
       <li class="order-list">
         <p class="main-color fw-bold">
           كوبون خصم
