--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,3 +1,9 @@
+@if (errorMessage) {
+<div class="alert alert-danger text-center my-3">
+  {{ errorMessage }}
+</div>
+}
+
 <div class="d-flex justify-content-between my-4">
   <h2>القائمة</h2>
   <button *ngIf="categories.length > 1" class="btn reversed border-0 main-color d-flex align-items-center"
@@ -39,7 +45,7 @@
     }
   </ul>
 
-  
+
   <div class="tab-content pt-4" id="pills-tabContent">
     <!-- <div class="tab-pane fade" [ngClass]="{ 'show active': !selectedCategory }" id="pills-offers" role="tabpanel"
       aria-labelledby="pills-offers-tab">
