--- a/src/app/tables/tables.component.html
+++ b/src/app/tables/tables.component.html
@@ -1,3 +1,9 @@
+@if (errorMessage) {
+<div class="alert alert-danger text-center my-3">
+  {{ errorMessage }}
+</div>
+}
+
 <!-- <div class="pills p-3" appShowLoaderUntilPageLoaded [isReady]="loading">
  Search Bar 
   <div class="input-group w-100 mx-auto my-3">
